core/tests/ui/sensitive/secure_enum_direct_rejected.stderr
error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
   = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
note: required because it appears within the type `EncryptedInvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Clone`
  --> $RUST/core/src/clone.rs
   |
   | pub const trait Clone: Sized {
   |                        ^^^^^ required by this bound in `Clone`
   = note: this error originates in the derive macro `Clone` which comes from the expansion of the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
note: required because it appears within the type `EncryptedInvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Serialize`
  --> $CARGO/serde_core-$VERSION/src/ser/mod.rs
   |
   | / pub trait Serialize {
   | |     /// Serialize this value into the given Serde serializer.
   | |     ///
   | |     /// See the [Implementing `Serialize`] section of the manual for more
...  |
   | |         S: Serializer;
   | | }
   | |_^ required by this bound in `Serialize`
   = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
note: required because it appears within the type `EncryptedInvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^
note: required by an implicit `Sized` bound in `Result`
  --> $RUST/core/src/result.rs
   |
   | pub enum Result<T, E> {
   |                 ^ required by the implicit `Sized` requirement on this type parameter in `Result`
   = note: this error originates in the derive macro `::serde::Deserialize` which comes from the expansion of the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
note: required because it appears within the type `EncryptedInvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Deserialize`
  --> $CARGO/serde_core-$VERSION/src/de/mod.rs
   |
   | pub trait Deserialize<'de>: Sized {
   |                             ^^^^^ required by this bound in `Deserialize`
   = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
note: required because it appears within the type `EncryptedInvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `_::_serde::de::Visitor::Value`
  --> $CARGO/serde_core-$VERSION/src/de/mod.rs
   |
   |     type Value;
   |     ^^^^^^^^^^^ required by this bound in `Visitor::Value`
   = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
note: required because it appears within the type `EncryptedInvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `SurrealValue`
  --> $CARGO/surrealdb-types-$VERSION/src/traits/surreal_value.rs
   |
   | / pub trait SurrealValue {
   | |     /// Returns the kind that represents this type
   | |     fn kind_of() -> Kind;
   | |     /// Checks if the given value can be converted to this type
...  |
   | |         Self: Sized;
   | | }
   | |_^ required by this bound in `SurrealValue`
   = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
note: required because it appears within the type `EncryptedInvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `appdb::Sensitive::Encrypted`
  --> src/lib.rs
   |
   |     type Encrypted;
   |     ^^^^^^^^^^^^^^^ required by this bound in `Sensitive::Encrypted`
   = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
note: required because it appears within the type `EncryptedInvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^
note: required by an implicit `Sized` bound in `Result`
  --> $RUST/core/src/result.rs
   |
   | pub enum Result<T, E> {
   |                 ^ required by the implicit `Sized` requirement on this type parameter in `Result`
   = note: this error originates in the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
note: required because it appears within the type `EncryptedInvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^
   = note: the return type of a function must have a statically known size
   = note: this error originates in the derive macro `Clone` which comes from the expansion of the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
note: required because it appears within the type `EncryptedInvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^
note: required by an implicit `Sized` bound in `Result`
  --> $RUST/core/src/result.rs
   |
   | pub enum Result<T, E> {
   |                 ^ required by the implicit `Sized` requirement on this type parameter in `Result`
   = note: this error originates in the derive macro `::surrealdb::types::SurrealValue` which comes from the expansion of the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
   = note: this error originates in the derive macro `Debug` which comes from the expansion of the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
   = note: this error originates in the derive macro `Clone` which comes from the expansion of the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
   = note: this error originates in the derive macro `::serde::Serialize` which comes from the expansion of the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error: this function depends on never type fallback being `()`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: Deserialize<'_>` will fail
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: `#[deny(dependency_on_unit_never_type_fallback)]` (part of `#[deny(rust_2024_compatibility)]`) on by default
   = note: this error originates in the derive macro `::serde::Deserialize` which comes from the expansion of the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `DirectSecureEnum: Sensitive` is not satisfied
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Sensitive` is not implemented for `DirectSecureEnum`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:6:1
   |
 6 | enum DirectSecureEnum {
   | ^^^^^^^^^^^^^^^^^^^^^
help: the trait `Sensitive` is implemented for `InvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: required for `DirectSecureEnum` to implement `SensitiveShape`
note: required because it appears within the type `EncryptedInvalidSecureEnumRecord`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:12:8
   |
12 | struct InvalidSecureEnumRecord {
   |        ^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `::surrealdb::types::SurrealValue` which comes from the expansion of the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0282]: type annotations needed
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:14:5
   |
14 |     state: DirectSecureEnum,
   |     ^^^^^ cannot infer type

error: this function depends on never type fallback being `()`
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: SurrealValue` will fail
  --> tests/ui/sensitive/secure_enum_direct_rejected.rs:11:48
   |
11 | #[derive(Debug, Clone, Serialize, Deserialize, Sensitive)]
   |                                                ^^^^^^^^^
   = note: this error originates in the derive macro `::surrealdb::types::SurrealValue` which comes from the expansion of the derive macro `Sensitive` (in Nightly builds, run with -Z macro-backtrace for more info)
